# APIWatch

./: .gitignore  CHANGELOG.md  Python API local observability plugin idea.md  README.md  REMEDIATION_PLAN.md  项目笔记.md
collector/: pyproject.toml
collector/apiwatch_collector/: __init__.py  aggregate.py  app.py  cli.py  models.py  storage.py
collector/apiwatch_collector/dashboard/: index.html
collector/tests/: test_aggregate.py  test_api.py  test_cli.py  test_storage.py
examples/: django_demo.py  fastapi_demo.py  flask_demo.py
probes/python/: pyproject.toml
probes/python/apiwatch/: __init__.py
probes/python/apiwatch/core/: __init__.py  capture.py  client.py  config.py  event.py  trace.py
probes/python/apiwatch/integrations/: __init__.py  asgi.py  django.py  flask.py
probes/python/tests/: test_asgi.py  test_django.py  test_flask.py  test_trace.py
scripts/: release_check.py
spec/: SPEC.md  event.schema.json
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: collector.ts  config.ts  extension.ts  frameworkDetector.ts  integrationGuide.ts
vscode-extension/src/test/: frameworkDetector.test.ts  integrationGuide.test.ts
